<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:text="@string/plp_title"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!--
        ComposeView used to host the Jetpack Compose sorting component
        (Compose integration inside a traditional View-based screen).
        // TODO Candidate: configure ProductSortCompose content and wire onSortSelected
    -->
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/sortComposeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/spacing_small"
            tools:listitem="@layout/item_product" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_large"
            android:gravity="center"
            android:text="@string/state_error"
            android:textColor="@color/error"
            android:visibility="gone" />

        <TextView
            android:id="@+id/emptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_large"
            android:gravity="center"
            android:text="@string/state_empty"
            android:textColor="@color/text_secondary"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>
